--- a/Parent/dept/src/main/resources/templates/dept.html
+++ b/Parent/dept/src/main/resources/templates/dept.html
@@ -15,7 +15,7 @@
         <tr th:each="dept: ${list}">
             <td th:text="${dept.id}"></td>
             <td th:text="${dept.id}"></td>
-            <td> <a href="#">查看</a> </td>
+            <td> <a th:href="@{/showEmp(did=${dept.id})}">查看</a> </td>
         </tr>
     </table>
 
